<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >   

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="20dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/profilImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/profile_photo"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="30dp" >

                <EditText
                    android:id="@+id/kullaniciAdiEditText"
                    android:hint="@string/kullanici_adi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" 
                    android:textColor="@android:color/black"/>
                  <EditText
                    android:id="@+id/kullanici_sifre"
                    android:hint="@string/sifre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" 
                    android:textColor="@android:color/black"/>

            </LinearLayout>

        </LinearLayout>
        
        <EditText
            android:id="@+id/adEditText"
            android:hint="@string/ad_zorunlu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:textColor="@android:color/black"/>
        
        <EditText
            android:id="@+id/soyadEditText"
            android:hint="@string/soyad_zorunlu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:textColor="@android:color/black"/>
        
        <EditText
            android:id="@+id/telefonEditText"
            android:hint="@string/telefon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:inputType="phone"
            android:textColor="@android:color/black"/>
        
        <EditText
            android:id="@+id/emailEditText"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:inputType="textEmailAddress"
            android:textColor="@android:color/black"/>

        <Button
            android:id="@+id/kaydetButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kaydet" 
            android:textColor="@android:color/black"/>

    </LinearLayout>    
    
</RelativeLayout>